--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       <h1>My CV Website</h1>
     </header>
     <main>
-      <section>
+      <section id="top" >
         <img src="google-logo.jpg">
-        <p>Lorem ipsum dolor sit amet, phasellus metus mattis curabitur, nulla nisl sed sociosqu, lorem a risus. Sollicitudin neque a magna eleifend cras, sed sit amet, aenean tempor, mollis ac fermentum imperdiet accumsan sem donec. Sed scelerisque luctus at quis metus in, feugiat tellus sollicitudin enim rutrum in. Vestibulum nec neque enim ante, in elit consequat eu lobortis. Ante pulvinar vel consectetuer euismod ipsum, voluptatibus nascetur consequat. Urna turpis sapien vitae etiam. Lectus diam ligula, suscipit integer gravida amet phasellus, fringilla auctor odio feugiat dui malesuada, augue aliquam nunc sed qui commodo, elit aliquam dolor. Non amet mi vestibulum pellentesque.
-</p>
+        <div><p>Lorem ipsum dolor sit amet, phasellus metus mattis curabitur, nulla nisl sed sociosqu, lorem a risus. Sollicitudin neque a magna eleifend cras, sed sit amet, aenean tempor, mollis ac fermentum imperdiet accumsan sem donec. Sed scelerisque luctus at quis metus in, feugiat tellus sollicitudin enim rutrum in. Vestibulum nec neque enim ante, in elit consequat eu lobortis. Ante pulvinar vel consectetuer euismod ipsum, voluptatibus nascetur consequat. Urna turpis sapien vitae etiam. Lectus diam ligula, suscipit integer gravida amet phasellus, fringilla auctor odio feugiat dui malesuada, augue aliquam nunc sed qui commodo, elit aliquam dolor. Non amet mi vestibulum pellentesque.
+        </p></div>
       </section>
-      <section>
+      <section id="middle">
         <h2>Employment History</h2>
         <p>Lorem ipsum dolor sit amet, phasellus metus mattis curabitur, nulla nisl sed sociosqu, lorem a risus. Sollicitudin neque a magna eleifend cras, sed sit amet, aenean tempor, mollis ac fermentum imperdiet accumsan sem donec. Sed scelerisque luctus at quis metus in, feugiat tellus sollicitudin enim rutrum in. Vestibulum nec neque enim ante, in elit consequat eu lobortis. Ante pulvinar vel consectetuer euismod ipsum, voluptatibus nascetur consequat. Urna turpis sapien vitae etiam. Lectus diam ligula, suscipit integer gravida amet phasellus, fringilla auctor odio feugiat dui malesuada, augue aliquam nunc sed qui commodo, elit aliquam dolor. Non amet mi vestibulum pellentesque.
 </p>
