cv information added

--- a/index.html
+++ b/index.html
@@ -7,56 +7,81 @@
   </head>
   <body>
     <header>
-      <h1>My CV Website</h1>
+      <h1>Gurpal Bahra</h1>
     </header>
     <main>
       <section id="top" >
         <img src="google-logo.jpg">
-        <div><p>Lorem ipsum dolor sit amet, phasellus metus mattis curabitur, nulla nisl sed sociosqu, lorem a risus. Sollicitudin neque a magna eleifend cras, sed sit amet, aenean tempor, mollis ac fermentum imperdiet accumsan sem donec. Sed scelerisque luctus at quis metus in, feugiat tellus sollicitudin enim rutrum in. Vestibulum nec neque enim ante, in elit consequat eu lobortis. Ante pulvinar vel consectetuer euismod ipsum, voluptatibus nascetur consequat. Urna turpis sapien vitae etiam. Lectus diam ligula, suscipit integer gravida amet phasellus, fringilla auctor odio feugiat dui malesuada, augue aliquam nunc sed qui commodo, elit aliquam dolor. Non amet mi vestibulum pellentesque.
+        <div><p>
+        I am a recent Computer Science graduate at the University of Essex and achieved a 2:1 Hons degree. I am very articulate and have excellent communications skills both verbally, on the phone or in person, and written which makes me able to form strong business relationships. These skills enable to fully understand the needs of a client or team member so I can do everything I can to meet those needs. I learned these skills from my previous experience in customer service and retail. When working on any project small or large, I try to stay organised and prioritise my time and resources so I can handle large workloads, multitask and complete all work by the deadline. This is an important skill as managing my time well as me to use my strong attention to detail to ensure I miss nothing while still ensuring I keep to my deadlines even while under pressure. My programming experience has taught great problem-solving skills. I have the ability to solve complex problems with simple solutions as well as an understanding of technical concepts. I am a proactive individual who confident finding an answer for myself or asking questions. I am looking for a challenging environment where I can make a contribution.
         </p></div>
       </section>
 
       <section id="middle">
-        <h2>Employment History</h2>
-        <p>Lorem ipsum dolor sit amet, phasellus metus mattis curabitur, nulla nisl sed sociosqu, lorem a risus. Sollicitudin neque a magna eleifend cras, sed sit amet, aenean tempor, mollis ac fermentum imperdiet accumsan sem donec. Sed scelerisque luctus at quis metus in, feugiat tellus sollicitudin enim rutrum in. Vestibulum nec neque enim ante, in elit consequat eu lobortis. Ante pulvinar vel consectetuer euismod ipsum, voluptatibus nascetur consequat. Urna turpis sapien vitae etiam. Lectus diam ligula, suscipit integer gravida amet phasellus, fringilla auctor odio feugiat dui malesuada, augue aliquam nunc sed qui commodo, elit aliquam dolor. Non amet mi vestibulum pellentesque.
-</p>
+        <h3>Education</h3>
+        <p>BSc (2:1 Hons) Computer Science
+University of Essex (2013 to 2016)
+
+Modules: Natural Language Engineering (Java), Robotics (Java), Advanced Robotics (Java, C++), Application Programming (Java), Introduction to Object Orientated Programming (Java), Distributed Systems (Java)
+
+Languages: Java, C++, C, SQL, Python, C, Perl, Javascipt, HTML, CSS, SQL
+
+Experience using Linux and Windows
+
+A: Levels Mathematics, Psychology, Biology
+
+GCSE’s x 12 including English and Maths
+
+        </p>
       </section>
       <aside>
       <article>
         <h3>Key Skills</h3>
           <ul>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
+            <li>Problem Solving</li>
+            <li>Organisation </li>
+            <li>Focused and driven mentality </li>
+            <li>Interpersonal skills</li>
+            <li>Quick Learner</li>
           </ul>
       </article>
        <article>
         <h3>Proggramming Languages</h3>
           <ul>
-            <li>blh</li>
-            <li>blh</li>
-            <li>blh</li>
-            <li>blh</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>Java</li>
           </ul>
       </article>
       </aside>
 
       <section id="bottom">
         <h3>Projects</h3>
-        <p>Lorem ipsum dolor sit amet, phasellus metus mattis curabitur, nulla nisl sed sociosqu, lorem a risus. Sollicitudin neque a magna eleifend cras, sed sit amet, aenean tempor, mollis ac fermentum imperdiet accumsan sem donec. Sed scelerisque luctus at quis metus in, feugiat tellus sollicitudin enim rutrum in. Vestibulum nec neque enim ante, in elit consequat eu lobortis. Ante pulvinar vel consectetuer euismod ipsum, voluptatibus nascetur consequat. Urna turpis sapien vitae etiam. Lectus diam ligula, suscipit integer gravida amet phasellus, fringilla auctor odio feugiat dui malesuada, augue aliquam nunc sed qui commodo, elit aliquam dolor. Non amet mi vestibulum pellentesque.
+        <p>
+        Publisher and Subscriber – As part of my Distributed Systems module, I created a program where a user could be a publisher, where they published a message or a subscriber where they subscribed to publishers messages. When a subscriber has subscribed to a publisher they receive the messages that published automatically. This was written in Java.
+
+Tetris – I created the popular game Tetris in the form of a Japplet so it could be used on the internet. It was written in Java.
+
+Robotics – For my assignment for my Advanced Robotics module, I wrote a program to make the robot move through a desired trajectory, pick up a ball and drop it on the desired spot. The robot used computer vision techniques to find ball when it comes into frame on its camera feed. It also took sensory data as it went along the desired trajectory (sonar, laser, wheel velocity readings). This program was written in C++.
+
+Eliza – As part of a natural language engineering assignment, I created a chabot program that decomposes an input sentences to the keywords then composes an answer using those keywords. This program main function was to inform travellers about train times. This was written in Java.
+
+Banking Website – In first year, I created website with basic internet banking functionalities. This required a relational database. Customers could deposit and withdraw money as well as change personal details. They could also create new accounts and delete old ones. This was written in Javascript but the database queries were done in SQL.
         </p>
       </section>
 
     </main>
     <footer>
       <h3>Contact</h3>
-      <ul>
-        <li>email</li>
-        <li>phone</li>
-        <li>github</li>
-        <li>linkedin</li>
-      </ul>
+      <nav>
+        <ul>
+          <li>gbahra</li>
+          <li>phone</li>
+          <li>github</li>
+          <li>linkedin</li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
