cv information changed

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@ Banking Website – In first year, I created website with basic internet banking
       <h3>Contact</h3>
       <nav>
         <ul>
-          <li>gbahra</li>
-          <li>phone</li>
-          <li>github</li>
-          <li>linkedin</li>
+          <li>email:       </li>
+          <li>phone:       </li>
+          <li>github:      </li>
+          <li>linkedin:    </li>
         </ul>
       </nav>
     </footer>
